// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionWatchEditWidget should render PositionWatchEditWidget correctly 1`] = `
<div
  className="position_watch_edit_widget"
>
  <div
    className="position_watch_edit_widget__select_wrapper"
  >
    <div
      className="position_watch_edit_widget__title"
    >
      Notification Level: 
    </div>
    <select
      className="position_watch_edit_widget__select"
      onChange={[Function]}
      value="ALL"
    >
      <option
        value="ALL"
      >
        ALL
      </option>
      <option
        value="SOME"
      >
        SOME
      </option>
      <option
        value="REQUIRED"
      >
        REQUIRED
      </option>
    </select>
  </div>
  <button
    className="position_watch_edit_widget__button"
    onClick={[Function]}
  >
    Remove Watch
  </button>
</div>
`;

exports[`PositionWatchEditWidget should render PositionWatchEditWidget correctly when positions watched does not contain a matching position id 1`] = `
<div
  className="position_watch_edit_widget"
>
  <div
    className="position_watch_edit_widget__select_wrapper"
  >
    <div
      className="position_watch_edit_widget__title"
    >
      Notification Level: 
    </div>
  </div>
  <button
    className="position_watch_edit_widget__button"
    onClick={[Function]}
  >
    Remove Watch
  </button>
</div>
`;
